--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ title                   : jekyll-theme-adfinis-ng
 email                   : your-email@example.com
 description             : >-
   Welcome to Adfinis!
-baseurl                 : "https://maryana-b.github.io/assets/css/bootstrap-4.min.css"
+baseurl                 : "https://maryana-b.github.io/jekyll-theme-adfinis-ng/"
 url                     : ""
 
 header:
