--- a/_config.yml
+++ b/_config.yml
@@ -32,8 +32,8 @@ header:
     title: "Contact"
     href: "https://adfinis.com/kontakt/"
 
-hero:
-  image_url: "https://www.publicdomainpictures.net/pictures/100000/nahled/blue-containers.jpg"
+#hero:
+#  image_url: "https://www.publicdomainpictures.net/pictures/100000/nahled/blue-containers.jpg"
 
 footer:
   blog:
