--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ header:
 #  image_url: "data:image/jpeg;base64, " #TODO
 
 hero:
-  image_url: "https://www.publicdomainpictures.net/pictures/100000/nahled/blue-containers.jpg":
+  image_url: "https://www.publicdomainpictures.net/pictures/100000/nahled/blue-containers.jpg"
 
 footer:
   blog:
